--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: p20202lek
+name: p20202cinza
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -27,16 +27,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.1
   firebase_core: ^0.4.5
   cloud_firestore: ^0.13.7
   firebase_storage: ^3.1.6
   firebase_auth: ^0.16.1
   image_picker: ^0.6.7+4
 
-
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
@@ -54,7 +55,6 @@ flutter:
     - imagens/logo.png
     - imagens/usuario.png
     - imagens/bg.png
-
 
   # To add assets to your application, add an assets section, like this:
   # assets:
